assets/scss/partials/_post.scss
@import "variables";
@import "compass/css3/border-radius";
@import "compass/css3/opacity";
@import "compass/css3/transform";
@import "compass/css3/transition";

.entry {
  box-sizing: border-box;
  background-color: white;

  .archive &,
  .blog & {
    margin-top: $space-size-medium;
  }

  .archive &:hover &-thumbnail,
  .blog &:hover &-thumbnail {
    img {
      @include opacity(0.9);
      @include transform(scale(1.05));
    }
  }

  &-category {
    text-align: center;
    width: 100%;
    display: block;
    color: grey;
    font-weight: normal;

    a {
      color: grey;
      text-transform: uppercase;
    }
  }

  &-title {
    display: inline-block;

    a {
      color: $font-color-headline-1;

      &:hover {
        text-decoration: none;
      }
    }

    .single &,
    .page & {
      text-align: center;
      width: 100%;
      margin: $space-size-small auto 0 auto;
    }

    .archive &,
    .blog & {
      text-align: left;
      font-size: $font-size-text;
      line-height: $font-line-height-text;
      margin-top: $space-size-medium;
    }
  }

  &-category {
    padding-top: $space-size-small;
  }

  &-thumbnail {
    img {
      width: 100%;
      height: auto;
      margin: 0 auto;
    }

    .single &,
    .page & {
      text-align: center;
      width: 100%;
      margin: $space-size-small auto;
    }

    .archive &,
    .blog & {
      min-height: $post-thumbnail-min-size;
      max-height: $post-thumbnail-max-size;
      overflow: hidden;
      background-color: #f5f5f5;
      @include border-top-radius(5px);

      img {
        @include transition-property(transform);
        @include transition-duration(0.25s);
        @include transition-timing-function(ease-in-out);
      }
    }
  }

  &-avatar {
    position: absolute;
    box-sizing: border-box;
    background-color: white;
    display: inline-block;
    padding: $space-size-extra-small;
    right: $space-size-small;
    top: (-1 * ($post-avatar-size + $space-size-extra-small) / 2);
    @include border-radius(50%);

    img {
      @include border-radius(50%);
      width: $post-avatar-size;
      height: $post-avatar-size;
    }
  }

  &-header {
    position: relative;

    .single &,
    .page & {
      padding: $space-size-small $space-size-medium 0 $space-size-medium;
    }

    .archive &,
    .blog & {
      padding: 0 $space-size-small;
    }
  }

  &-body {
    .single &,
    .page & {
      padding: $space-size-small $space-size-medium;
    }

    .archive &,
    .blog & {
      padding: 0 $space-size-small;
    }
  }

  &-footer {
    padding: 0 $space-size-small $space-size-small $space-size-small;
  }

  &-meta {
    list-style: none;
    display: inline;

    li {
      float: left;
      margin-left: $space-size-small;

      &:first-child {
        margin-left: 0;
      }
    }
  }

  address {
    font-style: italic;
  }

  & > p {
    margin: 1.5em 0;
  }

  %alignment {
    &.alignright {
      float: right;
      margin: 0 0 1em 1em
    }
    &.alignleft {
      float: left;
      margin: 0 1em 1em 0
    }
    &.aligncenter {
      display: block;
      margin-left: auto;
      margin-right: auto
    }
  }

  div, img {
    max-width: 100%;
    height: auto;
    @extend %alignment;
  }

  a img {
    @extend %alignment;
  }

  .wp-caption-text {
    text-align: center;
    margin-top: 0.5em;
  }
}

